# cutil

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  test_cast.cpp  test_contains.cpp  test_debug.cpp  test_erase_if.cpp  test_erase_if2.cpp  test_hashmap.cpp  test_simple.cpp  ビルドコマンド：
.claude/: settings.json
.github/workflows/: build_and_test.yml
cutil/: .vector.hpp.swp  color.hpp  dictionary.hpp  hash_map.hpp  json.hpp  logger.hpp  mat.hpp  octree.hpp  path.hpp  pool.hpp  prop.hpp  prop_io.hpp  prop_registry.hpp  quaternion.hpp  rect.hpp  rect3d.hpp  ref.hpp  ref_nanobind.hpp  string.hpp  string_nanobind.hpp  variant.hpp  vec.hpp  vector.hpp
example/: .CMakeLists.txt.swp  .cpplib.cpp.swp  .mylib.cpp.swp  CMakeLists.txt  cpplib.cpp  demo.py  mylib.cpp  mylib.py  test.py  test_import.py  test_mylib.py  w:
include/cutil/: color.hpp  logger.hpp  octree.hpp  poll.hpp  pool.hpp  rect.hpp  vector.hpp
scripts/: .run_clang_format.py.swp  run_clang_format.py
tests/: CMakeLists.txt  cutil_impl.cpp  entity.hpp  test_color.cpp  test_dictionary.cpp  test_entity.cpp  test_entity_benchmark.cpp  test_entity_prop.cpp  test_hash_map.cpp  test_json.cpp  test_mat_new.cpp  test_path.cpp  test_pool.cpp  test_prop.cpp  test_prop_binary.cpp  test_prop_dump_load.cpp  test_prop_info.cpp  test_prop_json.cpp  test_prop_pointer_binary.cpp  test_prop_registry.cpp  test_quaternion.cpp  test_rect.cpp  test_rect3d.cpp  test_ref.cpp  test_ref_integration.cpp  test_string.cpp  test_variant.cpp  test_vec_new.cpp  test_vector.cpp
